# object-detection

./: .gitignore  README.md  apply_nms.py  debug.py  evaluate_ap.py  optimal_threshold.py  pyproject.toml  splits.json  submit_test.sh  submit_threshold.sh  submit_training.sh  test.py  train.py
Project4_1/: visualization.ipynb
jobs/: c02516sh_train_pothole_classifier.sh  gpua100_train_pothole_classifier.sh  gpul40s_train_pothole_classifier.sh
results/: 2025-12-06T23:18:43.346094_20251206_231425_classification_results.json  20251206_225303_detection_results.json  20251206_230415_detection_results.json  20251206_232643_detection_results.json  20251206_233635_detection_results.json  20251207_010349_detection_results.json  loss_curves_27312386.csv
scratch/: Pothole_exploration.py  create_splits.py  evaluate_proposals.py  generate_labels.py  selective_search.py  splits.json
scratch/claude/: project_description.md
scratch/evaluation/: evaluation_results.json
scratch/mathilde_scratch/: Pothole_exploration.py  evaluate_proposals.py  evaluation_results.json  selective_search.py
scratch/proposals/: evaluation_results.pkl  extraction_summary.json  labels_test.pkl  labels_train.pkl  labels_val.pkl  test_predictions.pkl  test_predictions_nms.pkl
scratch/visualizations/: plot_losses.py  visualization.ipynb
scripts/: AP.py  IoU.py  NMS.py  create_splits.py  evaluate_pothole_classifier.py  evaluate_pothole_detector.py  evaluate_recall.py  explore_dataset.py  extract_losses.py  train_pothole_classifier.py
src/datasets/: create_splits.py  parse_xml.py  potholes.py
(+21 files in other folders)
