[project]
name = "object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "torchsummary>=1.5.1",
    "ruff>=0.14.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "opencv-python>=4.11.0.86",
  ]
